OneDrive/Desktop/Coisas/Traballhos_da_Faculdade_2026/Cloud DevOps Orchestrating/Projeto/pedidos-veloz/k8s/07-estoque-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: estoque-service
  namespace: pedidos-veloz
  labels:
    app: estoque-service
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: estoque-service
  template:
    metadata:
      labels:
        app: estoque-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "3003"
        prometheus.io/path: "/metrics"
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: estoque-service
          image: ghcr.io/loja-veloz/pedidos-veloz-estoque-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3003
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          readinessProbe:
            httpGet:
              path: /ready
              port: 3003
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 3003
            initialDelaySeconds: 10
            periodSeconds: 15
          resources:
            requests:
              cpu: 150m
              memory: 128Mi
            limits:
              cpu: 400m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: estoque-service
  namespace: pedidos-veloz
spec:
  type: ClusterIP
  selector:
    app: estoque-service
  ports:
    - port: 3003
      targetPort: 3003
